@@ -3,6 +3,9 @@
    Ensures messages from PAM modules are displayed when privsep=no.
  - (dtucker) [auth-pam.c] Bug #705: Make arguments match PAM specs, fixes
    warnings on compliant platforms.  From paul.a.bolton at bt.com.  ok djm@
+ - (dtucker) [auth-pam.c] Bug #559 (last piece): Pass DISALLOW_NULL_AUTHTOK
+   to pam_authenticate for challenge-response auth too.  Originally from
+   fcusack at fcusack.com, ok djm@
 
 20040630
  - (dtucker) [auth-pam.c] Check for buggy PAM modules that return a NULL
@@ -1471,4 +1474,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3465 2004/07/01 02:38:14 dtucker Exp $
+$Id: ChangeLog,v 1.3466 2004/07/01 04:00:14 dtucker Exp $
